Fixed map not showing by using nested flex containers.

--- a/src/js/components/App/App.module.scss
+++ b/src/js/components/App/App.module.scss
@@ -55,5 +55,6 @@
 }
 
 .map {
+	display: flex;
 	flex: 1 1 auto;
 }
