--- a/src/js/components/map/map.module.scss
+++ b/src/js/components/map/map.module.scss
@@ -1,3 +1,3 @@
 .map {
-	height: 100%;
+	flex: 1 1 auto;
 }
